--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
-    "mongoose": "^8.7.1"
+    "mongoose": "^8.7.1",
+    "mongoose-unique-validator": "^4.0.1",
+    "multer": "^1.4.5-lts.1"
   },
   "description": ""
 }
