--- a/backend/package.json
+++ b/backend/package.json
@@ -17,5 +17,9 @@
     "mongoose-unique-validator": "^4.0.1",
     "multer": "^1.4.5-lts.1"
   },
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.7",
+    "eslint": "^9.12.0"
+  }
 }
